# GEANT4_Readout

./: README.md  Sec_Readout.code-workspace  geant4.sh
PCB_Readout/: CMakeLists.txt  GNUMakefile  Readout.cc  init_vis.mac
PCB_Readout/include/: DetectorConstruction.hh  DetectorHit.hh  DetectorRun.hh  DetectorStrip.hh  PrimaryGeneratorAction.hh  RootWriter.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh  TrackingAction.hh
PCB_Readout/src/: DetectorConstruction.cc  DetectorHit.cc  DetectorRun.cc  DetectorStrip.cc  PrimaryGeneratorAction.cc  RootWriter.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc  TrackingAction.cc
Readout_analysis/: .gitignore  CMakeLists.txt  GNUMakeFile  Readout.cc  vis.mac
Readout_analysis/include/: HistoManager.hh
Readout_analysis/shared/include/: ActionInitialization.hh  DetectorConstruction.hh  RunAction.hh  (+5 more)
Readout_analysis/src/: HistoManager.cc
Sec_Readout/: CMakeLists.txt  GNUmakefile  init_vis.mac  readout.cc
Sec_Readout/include/: HistoManager.hh
Sec_Readout/share/include/: ROActionInitialization.hh  RODetectorConstruction.hh  ROPhysicsList.hh  ROReadoutHit.hh  ROReadoutSD.hh  RORunAction.hh
Sec_Readout/share/scripts/: copy_files.sh
Sec_Readout/share/src/: ROActionInitialization.cc  RODetectorConstruction.cc  ROPrimaryGeneratorAction.cc  ROReadoutSD.cc  RORunAction.cc
Sec_Readout/src/: HistoManager.cc
include/: ROActionInitialization.hh  ROEventAction.hh  ROPrimaryGeneratorAction.hh  RORunAction.hh
src/: ROActionInitialization.cc  ROEventAction.cc  ROPhysicsList.cc  ROReadoutHit.cc  RORunAction.cc
(+7 files in other folders)
